// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className=""
    onClick={[Function]}
  >
    Hello!
  </button>
</div>
`;

exports[`Storyshots Card simple card 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "padding": "50px",
        "width": "200px",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos libero deserunt soluta.
  </div>
</div>
`;

exports[`Storyshots TextInput simple text input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    htmlFor="text-input"
  >
    text input
    <input
      autoComplete="off"
      className="grommetux-text-input grommetux-input"
      defaultValue={undefined}
      id="text-input"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="text input"
      type="text"
      value={undefined}
    />
  </label>
</div>
`;
